# Cpp_Development_of_2D_Chess_Game_with_CMake_and_SDL2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake_helpers/: helpers.cmake
cmake_helpers/find_modules/: FindSDL2.cmake
common/: CommonDefines.h
engine/: Engine.cpp  Engine.h  EngineCfgLoader.cpp
engine/config/: EngineCfg.h
game/: Game.cpp  Game.h
game/config/: GameCfg.h
include/StartScreen/: StartScreen.h
include/StartScreen/buttons/: StartScreenButton.h
include/StartScreen/buttons/config/: StartScreenButtonCfg.h
include/StartScreen/config/: StartScreenCfg.h
include/StartScreen/defines/: StartScreenDefines.h
include/common/: CommonDefines.h
include/engine/: Engine.h  EngineCfgLoader.h
include/engine/config/: EngineCfg.h
include/game/: Game.h
include/game/animations/: WinnerAnimator.h
include/game/animator/: Animator.h
include/game/animator/types/: GameBoardAnimator.h  GameEndAnimator.h
include/game/board/: GameBoard.h  GameBoardAnimator.h  MoveSelector.h
include/game/buttons/: QuitGameButton.h  WheelButton.h
include/game/config/: GameCfg.h
include/game/defines/: ChessDefines.h  ChessStructs.h
include/game/entities/: Hero.h  Wheel.h
include/game/logScreen/: LogScreen.h
include/game/logic/: GameLogic.h  InputInverter.h
include/game/panels/: PiecePromotionPanel.h
include/game/panels/buttons/: PiecePromotionButton.h
include/game/panels/config/: PiecePromotionButtonCfg.h  PiecePromotionPanelCfg.h
include/game/pieces/: PieceHandler.h  PieceHandlerPopulator.h  PieceMoveAnimator.h
include/game/pieces/types/: Bishop.h  CapturedPiece.h  ChessPiece.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h  UnfinishedPiece.h
include/game/proxies/: GameBoardProxy.h  GameProxy.h  PieceHandlerProxy.h
include/game/utils/: BoardPos.h  BoardUtils.h
manager_utils/: CMakeLists.txt
manager_utils/include/manager_utils/config/: DrawMgrCfg.h  ManagerHandlerCfg.h  RsrcMgrCfg.h
manager_utils/include/manager_utils/debug/: DebugConsole.h
manager_utils/include/manager_utils/drawing/: Fbo.h  Image.h  Text.h  Widget.h
manager_utils/include/manager_utils/input/: ButtonBase.h
manager_utils/include/manager_utils/managers/: DrawMgr.h  ManagerHandler.h  MgrBase.h  RsrcMgr.h  TimerMgr.h
manager_utils/include/manager_utils/time/: TimerClient.h  TimerData.h
manager_utils/src/debug/: DebugConsole.cpp
manager_utils/src/drawing/: Fbo.cpp  Image.cpp  Text.cpp  Widget.cpp
manager_utils/src/input/: ButtonBase.cpp
manager_utils/src/managers/: DrawMgr.cpp  ManagerHandler.cpp  RsrcMgr.cpp  TimerMgr.cpp
manager_utils/src/time/: TimerClient.cpp
resources/non_coding_related/lectures_presentations_and_materials/1.Ubuntu_basics_CMake_tool_SDL2_library/: 00. CPP-Applications-Development-Course-Introduction.pptx  00.Virtual-Machine-Installation-Guidelines.docx  00.Windows-10-SDL-Installation.docx  01.Implementation-Guidelines.docx
resources/non_coding_related/lectures_presentations_and_materials/10.Game (1_4) - Object Layout/: 10.Implementation-Guidelines.docx
resources/non_coding_related/lectures_presentations_and_materials/11.Game(2_4) - Core Logic and Utilities/: 11.Implementation-Guidelines.docx
resources/non_coding_related/lectures_presentations_and_materials/12.Game(3_4) -  Features and Animations/: 12.Implementation-Guidelines.docx
resources/non_coding_related/lectures_presentations_and_materials/13.Game(4_4) -  Performance optimizations/: 13.Implementation-Guidelines.docx
resources/non_coding_related/lectures_presentations_and_materials/14.Final project assignment preparation/: 14. Chess-Implementation-Guidelines.docx  14. Custom-Game-Implementation-Guidelines.docx  14. Final-Project-Assignment-General-Requirements.docx  14. Final-Project-Defense-Guidelines.docx
resources/non_coding_related/lectures_presentations_and_materials/2.SDL2_library_runtime._Window_handling/: 02.Implementation-Guidelines.docx
resources/non_coding_related/lectures_presentations_and_materials/3.Mouse_and_keyboard_events.The_main_loop/: 03.Implementation-Guidelines.docx
resources/non_coding_related/lectures_presentations_and_materials/4.Image_Layering_and_Hardware_Accelerated_Rendering/: 04.Implementation-Guidelines.docx
resources/non_coding_related/lectures_presentations_and_materials/6.Texts_and_Colors/: 06.Implementation-Guidelines.docx
sdl_utils/: CMakeLists.txt  InputEvent.cpp  InputEvent.h  MonitorWindow.cpp  MonitorWindow.h  Renderer.cpp  Renderer.h  SDLLoader.cpp  SDLLoader.h  Texture.cpp  Texture.h
sdl_utils/config/: MonitorWindowCfg.h
sdl_utils/include/sdl_utils/: MonitorWindow.h  Renderer.h  Texture.h
sdl_utils/src/: InputEvent.cpp  MonitorWindow.cpp  Renderer.cpp  SDLLoader.cpp  Texture.cpp
sdl_utils/src/containers/: FboContainer.cpp  ImageContainer.cpp  TextContainer.cpp
src/: main.cpp
src/StartScreen/: StartScreen.cpp
src/StartScreen/buttons/: StartScreenButton.cpp
src/engine/: Engine.cpp  EngineCfgLoader.cpp
src/game/: Game.cpp
src/game/animations/: WinnerAnimator.cpp
src/game/animator/: Animator.cpp
src/game/board/: GameBoard.cpp  GameBoardAnimator.cpp  MoveSelector.cpp
src/game/buttons/: QuitGameButton.cpp  WheelButton.cpp
src/game/entities/: Hero.cpp  Wheel.cpp
src/game/logScreen/: LogScreen.cpp
src/game/logic/: GameLogic.cpp  InputInverter.cpp
src/game/panels/: PiecePromotionPanel.cpp
src/game/pieces/: PieceHandler.cpp  PieceHandlerPopulator.cpp  PieceMoveAnimator.cpp
src/game/utils/: BoardUtils.cpp
test/: CMakeLists.txt
test/googletest/: CMakeLists.txt
test/googletest/googlemock/: CMakeLists.txt
test/googletest/googletest/: CMakeLists.txt
test/utils/: CMakeLists.txt
test/utils/rectangle/: CMakeLists.txt  RectangleTest.cpp  RectangleTest.h  main.cpp
utils/: CMakeLists.txt
utils/drawing/: DrawParams.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
utils/input/: EventDefines.h
utils/src/drawing/: Color.cpp  DrawParams.cpp  Point.cpp  Rectangle.cpp
utils/src/thread/: ThreadUtils.cpp
utils/src/time/: Time.cpp
utils/thread/: ThreadUtils.cpp
utils/time/: Time.cpp  Time.h
(+26 files in other folders)
